# openshmem_rs

./: .env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  README.org  notes.org
.github/workflows/: book.yml  docs.yml
book/: book.toml
book/code/: Cargo.toml
book/code/src/: benchmark.rs  main.rs  sequential.rs  thread_parallel.rs
book/src/: BENCHMARKING.md  PARALLELPLAN.md  PRIMER.md  README.md  SEQUENTIAL.md  SUMMARY.md  THREADPARALLEL.md
examples/: atomic.rs  estimate-pi.rs  gpu.rs  hello_world.rs  lock.rs  mandlebrot.rs  pass_the_port.rs  reduction.rs  wait_until.rs
openshmem/: Cargo.toml  README.org
openshmem-sys/: Cargo.toml  README.md  build.rs
openshmem-sys/src/: docs.rs.md  lib.rs  shmem.rs  shmemx.rs
openshmem-sys/src/sos-headers/include/: shmem-def.h  shmem.fh  shmem.h  shmemx.fh
openshmem-sys/src/sos-headers/include/mpp/: shmemx.h
openshmem/.cargo/: config.toml
openshmem/examples/: hello_world.rs  mandlebrot.rs  reduction.rs
openshmem/src/: lib.rs  macros.rs  test.rs
src/: atomics.rs  lib.rs  macros.rs  nbi.rs  reduce.rs  shmalloc.rs  shmutex.rs  test.rs  wait.rs
