[package]
name = "openshmem"
version = "0.1.0"
edition = "2021"

[features]
default = ["shmalloc"]
shmalloc = []
rma = ["shmalloc"]

[dev-dependencies]
#cubecl = { git = "https://github.com/tracel-ai/cubecl.git", version = "0.4.0", features = ["wgpu"] }

[dependencies]
bytemuck = "1.19"
lazy_static = "1.5"
openshmem-sys = "1.5"
paste = "1.0"
thiserror = "1.0"

[[example]]
name = "hello_world"
doc-scrape-examples = true

[[example]]
name = "gpu"
doc-scrape-examples = true
