[package]
name = "openshmem-rs"
version = "1.5.2-3"
edition = "2021"
description = "Wrappers for the OpenSHMEM API."
authors = ["Yash Kumar <ykumar@ttu.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kumaryash6352/openshmem-rs"

[features]
default = ["shmalloc"]
shmalloc = []
rma = ["shmalloc"]

[dev-dependencies]
ctor = "0.2.8"
#cubecl = { git = "https://github.com/tracel-ai/cubecl.git", version = "0.4.0", features = ["wgpu"] }

[dependencies]
bytemuck = "1.19"
lazy_static = "1.5"
openshmem-sys = "1.5"
paste = "1.0"
thiserror = "1.0"

[[example]]
name = "hello_world"
doc-scrape-examples = true

