[package]
name = "openshmem-sys"
version = "1.5.2"
edition = "2021"
description = "Bindings for the OpenSHMEM API."
authors = ["Yash Kumar <ykumar@ttu.edu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kumaryash6352/openshmem-rs"

[build-dependencies]
bindgen = "0.69.4"

[features]
default = ["shmemx"]
shmemx = []
